compiler/toc-hir-lowering/tests/snapshots/lowering__lower_complex_real_literal-16.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 94393431193180696942841837085033647913224148539854e-358"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..72): "<root>"@(dummy)
      StmtBody@(src/main.t:0..72): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..72)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..72): Real(9.43934311931807e-309)
