compiler/toc-hir-lowering/tests/snapshots/lowering__lower_complex_real_literal-9.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 3.339068557571188581835713701280943911923401916998521771655656997328440314559615318168849149074662609099998113009465566426808170378434065722991659642619467706034884424989741080790766778456332168200464651593995817371782125010668346652995912233993254584461125868481633343674905074271064409763090708017856584019776878812425312008812326260363035474811532236853359905334625575404216060622858633280744301892470300555678734689978476870369853549413277156622170245846166991655321535529623870646888786637528995592800436177901746286272273374471701452991433047257863864601424252024791567368195056077320885329384322332391564645264143400798619665040608077549162173963649264049738362290606875883456826586710961041737908872035803481241600376705491726170293986797332763671875E-319"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..780): "<root>"@(dummy)
      StmtBody@(src/main.t:0..780): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..780)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..780): Real(3.33904e-319)
