compiler/toc-hir-lowering/tests/snapshots/lowering__lower_enum_type-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : enum(a, b, c, d)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..25): "<root>"@(dummy)
      StmtBody@(src/main.t:0..25): []
        StmtItem@(src/main.t:0..25): ItemId(0)
          Type@(src/main.t:0..25): "_"@(src/main.t:5..6)
            Enum@(src/main.t:9..25): "_"@(src/main.t:9..25) [ a,b,c,d ]
